--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.iesebre.ptfinalmp7"
     android:versionCode="1"
     android:versionName="1.0" >
+    <supports-screens android:xlargeScreens="true" />  
 
     <uses-sdk
         android:minSdkVersion="11"
